# NokiaAcademyFightMMO

./: Boots.cpp  Boots.h  CMakeLists.txt  Dagger.cpp  Dagger.h  Gloves.cpp  Gloves.h  Hammer.cpp  Hammer.h  Helm.cpp  Helm.h  IArmor.cpp  IArmor.h  Item.h  Pants.cpp  Pants.h  Player.cpp  Player.h  README.md  Tunic.cpp  Tunic.h  Weapon.cpp  Weapon.h  main.cpp
